<resources>
    <string name="app_name">Math Pie</string>
    <string name="play">Play </string>
    <string name="levels">Levels </string>
    <string name="settings">Settings</string>
    <string name="exit">Exit ! </string>
    <string name="sounds_on"> Sounds on </string>
    <string name="sounds_off"> Sounds off </string>
    <string name="level_1"> Level 1 </string>
    <string name="what_number_should_come_next">What number should come next ?</string>
    <string name="how_many_circles_contain_the_dots">How many circles contain the dots?</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="_31">31</string>
    <string name="_32">32</string>
    <string name="_33">33</string>
    <string name="_34">34</string>
    <string name="_35">35</string>
    <string name="_36">36</string>
    <string name="_37">37</string>
    <string name="_38">38</string>
    <string name="_39">39</string>
    <string name="_40">40</string>
    <string name="_41">41</string>
    <string name="_42">42</string>
    <string name="_43">43</string>
    <string name="_44">44</string>
    <string name="_45">45</string>
    <string name="_46">46</string>
    <string name="_47">47</string>
    <string name="_48">48</string>
    <string name="_49">49</string>
    <string name="_50">50</string>
    <string name="_51">51</string>
    <string name="_52">52</string>
    <string name="_53">53</string>
    <string name="_54">54</string>
    <string name="_55">55</string>
    <string name="_56">56</string>
    <string name="_57">57</string>
    <string name="_58">58</string>
    <string name="_59">59</string>
    <string name="_60">60</string>
    <string name="_61">61</string>
    <string name="_62">62</string>
    <string name="_63">63</string>
    <string name="_64">64</string>
    <string name="_65">65</string>
    <string name="_66">66</string>
    <string name="_67">67</string>
    <string name="_68">68</string>
    <string name="_69">69</string>
    <string name="_70">70</string>
    <string name="_71">71</string>
    <string name="_72">72</string>
    <string name="_73">73</string>
    <string name="_74">74</string>
    <string name="_75">75</string>
    <string name="_76">76</string>
    <string name="_77">77</string>
    <string name="_78">78</string>
    <string name="_79">79</string>
    <string name="_80">80</string>
    <string name="_81">81</string>
    <string name="_82">82</string>
    <string name="_83">83</string>
    <string name="_84">84</string>
    <string name="_85">85</string>
    <string name="_86">86</string>
    <string name="_87">87</string>
    <string name="_88">88</string>
    <string name="_89">89</string>
    <string name="_90">90</string>
    <string name="_91">91</string>
    <string name="_92">92</string>
    <string name="_93">93</string>
    <string name="_94">94</string>
    <string name="_95">95</string>
    <string name="_96">96</string>
    <string name="_97">97</string>
    <string name="_98">98</string>
    <string name="_99">99</string>
    <string name="_100">100</string>
    <string name="_101">101</string>
    <string name="_102">102</string>
    <string name="_103">103</string>
    <string name="_104">104</string>
    <string name="_105">105</string>
    <string name="_106">106</string>
    <string name="_107">107</string>
    <string name="_108">108</string>
    <string name="_109">109</string>
    <string name="_110">110</string>
    <string name="answer">Answer</string>
    <string name="restart">Restart</string>
    <string name="if_you_clear_the_data_game_will_restart">If you clear the data,Your progress will be lost, And the Game will restart from the first level.</string>
    <string name="redirecting">Redirecting</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="restart_game">Restart Game</string>
    <string name="todo">TODO</string>
    <string name="exit_no_exclamatory">Exit</string>
    <string name="clear_all_data">Clear All Data?</string>
    <string name="version">Version 1.0.0</string>
    <string name="aha_correct">Aha! Correct</string>
    <string name="next_level">next level</string>
    <string name="ask_friend">Ask Friend</string>
    <string name="exit_game">Exit Game ?</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_exit_the_game">Are you sure want to Exit the Game ?</string>
    <string name="which_number_replaces_the_question_mark">Which number replaces the question mark?</string>
    <string name="what_will_be_the_right_answer">What will be the right answer?</string>
    <string name="give_the_appropriate_answer">Give the appropriate answer?</string>
    <string name="game_is_Restarted">Game is Restarted, You can play from the First Level.</string>
    <string name="progress">Progress</string>
    <string name="first_number_x_2_1_second_number">(First number x 2) - 1 = second number</string>
    <string name="add_1_in_each">Add 1 in each row</string>
    <string name="which_number_completes_the_puzzle">Which number completes the puzzle?</string>
    <string name="table_of_8">Table of 8</string>
    <string name="multiply_6_on_left_side">Multiply 6 on left side</string>
    <string name="green_circles_12">Green circles = 12</string>
    <string name="sum_of_the_two_digits_in_opposite_quadrant">Sum of the Two digits in opposite quadrant.</string>
    <string name="move_upward_to_the_peak_by_adding_numbers_from_previous_row">Move upward to the peak by adding numbers from previous row.</string>
    <string name="ignore_middle_term_then_square_and_join_left_and_right_terms">Ignore middle term then square and join left and right terms.</string>
    <string name="address_of_row_and_column">Address of row and column.</string>
    <string name="from_top_to_bottom_double_each_number_and_subtract_1_then_2_etc">From top to bottom, double each number and subtract 1, then 2 etc.</string>
    <string name="answer_is_14">The answer is 14</string>
    <string name="second_forth_quadrant_first_third_quadrant_origin">(Second + Forth quadrant) - (First + Third quadrant) = Origin</string>
    <string name="complete_the_puzzle">Complete the puzzle.</string>
    <string name="the_number_at_the_top_equals_the_average_of_the_four_smaller_numbers">The number at the top equals the average of the four smaller numbers.</string>
    <string name="the_answer_is_7">The answer is 7</string>
    <string name="the_answer_is_9">The answer is 9</string>
    <string name="square_top_left_square_top_right_bottom">Square top left + Square top right = Bottom</string>
</resources>