<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/opacity_Eighty_percent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="22sp"
        android:textColor="@color/background_121212"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:id="@+id/reset"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_121212"
        android:gravity="start"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/restart_game"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/red_opacity_eighty_percent"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_reset"
        app:iconGravity="start"
        app:iconPadding="4dp"
        app:iconTint="@color/opacity_Eighty_percent" />
    <Button
        android:id="@+id/privacy"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_121212"
        android:gravity="start"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/privacy_policy"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/opacity_Eighty_percent"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_privacy"
        app:iconGravity="start"
        app:iconPadding="4dp"
        app:iconTint="@color/opacity_Eighty_percent" />
    <Button
        android:id="@+id/terms"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/background_121212"
        android:gravity="start"
        android:paddingTop="10dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/terms_of_use"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/opacity_Eighty_percent"
        android:textSize="20sp"
        app:cornerRadius="100dp"
        app:icon="@drawable/ic_terms"
        app:iconGravity="start"
        app:iconPadding="4dp"
        app:iconTint="@color/opacity_Eighty_percent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="10sp"
        android:textColor="@color/background_121212"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>