<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:forceDarkAllowed="false"
    android:background="#121212"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true">

        <TextView
            android:id="@+id/textViewTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_corner"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginLeft="2dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="@string/which_number_replaces_the_question_mark"
            android:elevation="01dp"
            android:textColor="@color/opacity_Eighty_percent"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_above="@+id/footer"
        android:gravity="center_vertical"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        android:background="@drawable/background_corner"
        android:layout_below="@+id/header">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="01dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:gravity="center_horizontal|center_vertical">

                <ImageView
                    android:id="@+id/image_level_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/level_18"
                    android:contentDescription="@string/todo" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Ask_friend"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_above="@id/footer">
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="vertical"
            android:background="@drawable/background_corner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_hint"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="2dp"
                    app:icon="@drawable/ic_hint"
                    app:iconGravity="textEnd"
                    app:rippleColor="#3d121212"
                    app:iconTint="@color/opacity_Eighty_percent"
                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:cornerRadius="4dp" />





                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/answerEditTextLayout"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:hint="@string/answer"
                    android:textColorHint="#61ffffff"
                    android:layout_marginRight="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginBottom="2dp"
                    app:hintTextColor="@color/opacity_Eighty_percent"
                    app:boxStrokeColor="@color/text_input_box"
                    app:endIconTint="@color/opacity_Eighty_percent"
                    app:endIconMode="clear_text"
                    android:gravity="center"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAnswer"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:cursorVisible="false"
                        android:inputType="number"
                        android:focusable="false"
                        style="@style/Theme.MaterialComponents"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:maxLength="6"
                        android:textColor="@color/opacity_Eighty_percent"
                        android:background="@null"
                        android:textSize="23sp" />
                </com.google.android.material.textfield.TextInputLayout>





























                <Button
                    android:id="@+id/button_done"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="4dp"
                    app:icon="@drawable/ic_check"
                    app:iconGravity="textEnd"
                    app:iconTint="@color/opacity_Eighty_percent"

                    style="@style/Widget.MaterialComponents.Button.Icon"
                    android:gravity="center"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:rippleColor="#3d121212"
                    app:cornerRadius="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_1"
                    android:layout_width="0dp"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:layout_marginTop="-4dp"
                    app:rippleColor="#3d121212"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:cornerRadius="4dp"
                    />
                <Button
                    android:id="@+id/button_2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button"
                    android:text="@string/_2"
                    app:rippleColor="#3d121212"
                    android:layout_marginTop="-4dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:cornerRadius="4dp" />
                <Button
                    android:id="@+id/button_3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    app:rippleColor="#3d121212"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:layout_marginTop="-4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:cornerRadius="4dp" />
                <Button
                    android:id="@+id/button_4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    app:rippleColor="#3d121212"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:layout_marginTop="-4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:cornerRadius="4dp" />
                <Button
                    android:id="@+id/button_5"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.Button"
                    android:text="@string/_5"
                    app:rippleColor="#3d121212"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:layout_marginTop="-4dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:cornerRadius="4dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/button_6"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    app:rippleColor="#3d121212"
                    android:layout_marginTop="-4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    app:cornerRadius="4dp" />
                <Button
                    android:id="@+id/button_7"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    style="@style/Widget.MaterialComponents.Button"
                    app:rippleColor="#3d121212"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    android:layout_marginTop="-4dp"
                    app:cornerRadius="4dp"/>
                <Button
                    android:id="@+id/button_8"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_8"
                    style="@style/Widget.MaterialComponents.Button"
                    app:rippleColor="#3d121212"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    android:layout_marginTop="-4dp"
                    app:cornerRadius="4dp" />
                <Button
                    android:id="@+id/button_9"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_9"
                    app:rippleColor="#3d121212"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="2dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    android:layout_marginTop="-4dp"
                    app:cornerRadius="4dp" />
                <Button
                    android:id="@+id/button_0"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    app:rippleColor="#3d121212"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_marginStart="2dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/opacity_Eighty_percent"
                    android:textSize="25sp"
                    android:layout_marginTop="-4dp"
                    app:cornerRadius="4dp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>

